This file lists changes on this extension.
Localisation updates are done on betawiki and aren't listed here.

0.10.1 - 19 November 2008
  Added links for APC and User Merge extensions.

0.10.0 - 15 November 2008
  * Added $wgConfigureFileSystemCache to allow file-system cache (only with
    database handler)
  * Added description for each setting.
  * API module can now be disabled with $wgConfigureAPI.
  * Removed $wgNamespacesToBeSearchedProject.

0.9.7 - 14 November 2008
  * Added SocialProfile, SpamRegex and UserMerge extensions.
  * Updated Inputbox extension.

0.9.6 - 13 November 2008
  * Version list on Special:ViewConfig now uses a pager.
  * Listed version at the top Special:Configure and Special:Extension are only
    shown when they contain the configuration for the wiki being modified.

0.9.5 - 12 November 2008
  Added $wgNamespacesToBeSearchedProject.

0.9.4 - 9 November 2008
  Fixed type of $wgPasswordAttemptThrottle.

0.9.3 - 8 November 2008
  Version listing on Special:ViewConfig now doesn't load the whole configuration
  for each version when using database handler.

0.9.2 - 6 November 2008
  Fixed a bug in settings merging (introduced in version 0.8.10).

0.9.1 - 5 November 2008
  * MediaWiki: added $wgAllowUserSkin, $wgDebugLogPrefix, $wgEnotifUseRealName
    and $wgImageMagickTempDir.
  * Extensions: updated AbsenteeLandlord, CentralNotice, CodeReview and
    Collection.

0.9.0 - 1 November 2008
  Added database-based storage.


0.8.12 - 30 October 2008
  * Added $wgFilterLogTypes and $wgRC2UDPInterwikiPrefix.
  * Fixed type of $wgNoFollowNsExceptions.

0.8.11 - 28 October 2008
  * Added the possibiliy to restrict extensions settings in
    $wgConfigureAdditionalExtensions.
  * Updated Asksql extension

0.8.10 - 26 October 2008
  Settings which have the same value as in DefaultSettings.php are now removed
  from the saved configuration.

0.8.9 - 25 October 2008
  Removed $wgNamespacesToBeSearchedProject.

0.8.8 - 23 October 2008